exports[`App component renders correctly when the pathname does not match a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="clipped"
  desktopMinWidth={1025}
  drawerHeader={
    <Toolbar
      colored={true}
      component="header"
      prominentTitle={true}
      singleColor={true}
      style={
        Object {
          "backgroundColor": "#ff4081",
        }
      } />
  }
  drawerTransitionDuration={300}
  extractMini={true}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "component": "a",
        "key": "all",
        "leftIcon": <MdApps
          size={24} />,
        "primaryText": "All",
        "to": "/all",
      },
      Object {
        "component": "a",
        "key": "inbox",
        "leftIcon": <MdInbox
          size={24} />,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": "a",
        "key": "projects",
        "leftIcon": <MdAssignment
          size={24} />,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": "a",
        "key": "tags",
        "leftIcon": <MdLabel
          size={24} />,
        "primaryText": "Tags",
        "to": "/tags",
      },
      Object {
        "component": "a",
        "key": "today",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Today",
        "to": "/today",
      },
      Object {
        "component": "a",
        "key": "tomorrow",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Tomorrow",
        "to": "/tomorrow",
      },
      Object {
        "component": "a",
        "key": "overdue",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Overdue",
        "to": "/overdue",
      },
      Object {
        "component": "a",
        "key": "week",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Next 7 Days",
        "to": "/week",
      },
      Object {
        "component": "a",
        "key": "account",
        "leftIcon": <MdPerson
          size={24} />,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="clipped"
  tabletMinWidth={768}
  temporaryIconChildren={<MdMenu />}
  toolbarActions={
    Array [
      <ButtonTooltipedInked
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}>
        <MdSync />
    </ButtonTooltipedInked>,
    ]
  }
  toolbarThemeType="colored"
  toolbarTitleMenu={
    <SelectField
      defaultValue=""
      iconChildren={
        <MdArrowDropDown
          size={24} />
      }
      id="items-to-show-selection"
      itemLabel="label"
      itemValue="value"
      keyboardMatchingTimeout={1000}
      lineDirection="left"
      menuItems={
        Array [
          "All",
          "Not Completed",
          "Completed",
        ]
      }
      position="tl"
      stretchList={true} />
  }
  transitionEnterTimeout={300}
  transitionName="md-cross-fade">
  <Component />
  <SnackbarContainer
    autohide={true}
    autohideTimeout={3000}
    toasts={Array []}
    transitionEnterTimeout={300}
    transitionLeaveTimeout={300}
    transitionName="md-snackbar" />
  <Connect(Component) />
  <Connect(Component) />
</NavigationDrawer>
`;

exports[`App component renders correctly when the pathname matches a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="clipped"
  desktopMinWidth={1025}
  drawerHeader={
    <Toolbar
      colored={true}
      component="header"
      prominentTitle={true}
      singleColor={true}
      style={
        Object {
          "backgroundColor": "#ff4081",
        }
      } />
  }
  drawerTransitionDuration={300}
  extractMini={true}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "component": "a",
        "key": "all",
        "leftIcon": <MdApps
          size={24} />,
        "primaryText": "All",
        "to": "/all",
      },
      Object {
        "active": true,
        "component": "a",
        "key": "inbox",
        "leftIcon": <MdInbox
          size={24} />,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": "a",
        "key": "projects",
        "leftIcon": <MdAssignment
          size={24} />,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": "a",
        "key": "tags",
        "leftIcon": <MdLabel
          size={24} />,
        "primaryText": "Tags",
        "to": "/tags",
      },
      Object {
        "component": "a",
        "key": "today",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Today",
        "to": "/today",
      },
      Object {
        "component": "a",
        "key": "tomorrow",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Tomorrow",
        "to": "/tomorrow",
      },
      Object {
        "component": "a",
        "key": "overdue",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Overdue",
        "to": "/overdue",
      },
      Object {
        "component": "a",
        "key": "week",
        "leftIcon": <MdToday
          size={24} />,
        "primaryText": "Next 7 Days",
        "to": "/week",
      },
      Object {
        "component": "a",
        "key": "account",
        "leftIcon": <MdPerson
          size={24} />,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="clipped"
  tabletMinWidth={768}
  temporaryIconChildren={<MdMenu />}
  toolbarActions={
    Array [
      <ButtonTooltipedInked
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}>
        <MdSync />
    </ButtonTooltipedInked>,
    ]
  }
  toolbarThemeType="colored"
  toolbarTitleMenu={
    <SelectField
      defaultValue=""
      iconChildren={
        <MdArrowDropDown
          size={24} />
      }
      id="items-to-show-selection"
      itemLabel="label"
      itemValue="value"
      keyboardMatchingTimeout={1000}
      lineDirection="left"
      menuItems={
        Array [
          "All",
          "Not Completed",
          "Completed",
        ]
      }
      position="tl"
      stretchList={true} />
  }
  transitionEnterTimeout={300}
  transitionName="md-cross-fade">
  <Component />
  <SnackbarContainer
    autohide={true}
    autohideTimeout={3000}
    toasts={Array []}
    transitionEnterTimeout={300}
    transitionLeaveTimeout={300}
    transitionName="md-snackbar" />
  <Connect(Component) />
  <Connect(Component) />
</NavigationDrawer>
`;
